src/CSS/global.css
:root {
  --primary-dark: #2B2D42;
  --primary-light: #8D99AE;
  --primary-accent: #F8F32B;
  --secondary-dark: #000;
  --secondary-light: #fff;
}

::-webkit-scrollbar {
  width: 10px;
}

::-webkit-scrollbar {
  background: var(--secondary-dark);
}

::-webkit-scrollbar-thumb {
  background: var(--primary-dark);
}

#app {
  font-family: Consolas, monaco, monospace !important;
}

#app > .container::before {
  height: 100%;
  width: 100%;
}

#app > .container {
  height: 100vh;
  width: 100%;
  padding-top: 62px;
  max-width: none !important;
  margin-left: auto;
  margin-right: auto;
  padding-left: 0;
  padding-right: 0;
  overflow-y: auto;
  overflow-x: hidden;
}

a {
  color: var(--primary-accent);
  transition: all 750ms;
}

a:hover {
  color: var(--secondary-dark);
}

.text-pl a:hover {
  color: var(--primary-light);
}

.navbar {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 2;
  overflow-y: visible !important;
  max-height: 62px;
}

#Footer {
  position: fixed;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 2;
}

.disabled-cursor {
  pointer-events: none;
}

.hidden {
  opacity: 0;
}

.row {
  margin-left: auto;
  margin-right: auto;
}

.dropdown-content {
  display: none;
  position: absolute;
  min-width: 160px;
  z-index: 1;
}

.show {
  display: block;
}

.bg-pd {
  background-color: var(--primary-dark);
}

.bg-pl {
  background-color: var(--primary-light);
}

.bg-sd {
  background-color: var(--secondary-dark);
}

.bg-sl {
  background-color: var(--secondary-light);
}

.text-pl {
  color: var(--primary-light) !important;
}

.text-sl {
  color: var(--secondary-light);
}

.text-sd {
  color: var(--secondary-dark);
}

.btn {
  border: 0px;
  border-radius: 0px;
  transition: all 750ms;
}

.btn-dark {
  color: var(--primary-light);
}

.btn-dark:hover {
  background-color: var(--secondary-dark);
  color: var(--secondary-light) !important;
}

.LinkButton {
  border-bottom: solid var(--primary-accent) 5px;
  transition: all 750ms;
  border-top: 0px;
  border-left: 0px;
  border-right: 0px;
}

.top {
  margin-bottom: 200px;
}

.content,
.content-row,
.top-content-row {
  position: relative;
  z-index: 1;
}

.content-row {
  margin-top: 0px;
}

.top-content-row {
  margin-bottom: 0vh;
}

.mtop-5 {
  margin-top: 5px;
}

.mtop-10 {
  margin-top: 10px;
}

.mtop-15 {
  margin-top: 15px;
}

.mtop-20 {
  margin-top: 20px;
}

.mtop-25 {
  margin-top: 25px;
}

.mtop-30 {
  margin-top: 30px;
}

.mtop-35 {
  margin-top: 35px;
}

.mtop-40 {
  margin-top: 40px;
}

.mtop-45 {
  margin-top: 45px;
}

.mtop-50 {
  margin-top: 50px;
}

.mtop-55 {
  margin-top: 55px;
}

.mtop-60 {
  margin-top: 60px;
}

.mtop-65 {
  margin-top: 65px;
}

.mtop-70 {
  margin-top: 70px;
}

.mtop-75 {
  margin-top: 75px;
}

.mtop-80 {
  margin-top: 80px;
}

.mtop-85 {
  margin-top: 85px;
}

.mtop-90 {
  margin-top: 90px;
}

.mtop-95 {
  margin-top: 95px;
}

.mtop-100 {
  margin-top: 100px;
}

.mtop-100 {
  margin-top: 100px;
}

.mtop-200 {
  margin-top: 200px;
}

.mtop-300 {
  margin-top: 300px;
}

.mtop-400 {
  margin-top: 400px;
}

.mtop-500 {
  margin-top: 500px;
}

.mtop-600 {
  margin-top: 600px;
}

.mtop-700 {
  margin-top: 700px;
}

.mtop-800 {
  margin-top: 800px;
}

.br-5 {
  border-radius: 5px;
}

.br-10 {
  border-radius: 10px;
}

.br-15 {
  border-radius: 15px;
}

.br-20 {
  border-radius: 20px;
}

.br-25 {
  border-radius: 25px;
}/*# sourceMappingURL=global.css.map */

